@@ -1,3 +1,8 @@
+2001-10-11  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* pagesmgr.tcl: allowed the ability to specify page by name,
+	not just number.
+
 2001-09-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* notebook.tcl: Removed 'Canvas' from the list of bindtags for the
